tests/fixtures/valid/declarations/multiline_indicator.pine
//@version=6
indicator(
    "Wrapped Declaration",
    overlay = true
)
plot(close)
