tests/fixtures/invalid/semantic/local_scope_history_warning.pine
//@version=6
indicator("Bad")
if true
    local = close
    x = local[1]
break
